# ROS2_Practice

./: README.md
src/colcon_simple/: CMakeLists.txt  package.xml
src/colcon_simple/cmake/: colcon_simple-extra.cmake
src/hello_world/: CMakeLists.txt  package.xml
src/hello_world/src/: main.cpp
src/practice_msgs/: CMakeLists.txt  package.xml
src/practice_msgs/msg/: TestMsg1.msg  TestMsg2.msg  TestMsg3.msg  TestMsg4.msg  TestMsg5.msg
src/practice_msgs/srv/: TestSrv1.srv
src/pub_sub/: CMakeLists.txt  package.xml
src/pub_sub/src/: pub.cpp  sub.cpp
src/pub_sub_practice_msgs/: CMakeLists.txt  package.xml
src/pub_sub_practice_msgs/src/: pub_practice_msgs.cpp  sub_practice_msgs.cpp
src/srv_practice_msgs/: CMakeLists.txt  package.xml
src/srv_practice_msgs/src/: client.cpp  server.cpp
