<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>colcon_simple</name>
  <version>0.1.0</version>
  <description>making ros2 colcon build system more simple!</description>
  <maintainer email="jisuk500@gmail.com">LeeJiseok</maintainer>
  <license>APACHI 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
